--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
+    "uuid": "^8.3.0",
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
